Добавленна сетка контейнера и базовые настройки для шрифта

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Привет мир</h1>
+    </div>
+    <!-- /.container -->
     <script src="./script/script.js"></script>
 </body>
 </html>
